--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       position: relative;
       min-height: 100vh;
     }
-    /* Canvas для звёздного поля */
+    /* Canvas для звездного поля */
     #starsCanvas {
       position: fixed;
       top: 0;
@@ -62,6 +62,14 @@
       color: #00ccff;
       text-shadow: 0 0 8px #00ccff;
       animation: fadeIn 0.5s ease;
+    }
+
+    /* Изображение сайта (файл 202654381.png) */
+    .site-image {
+      display: block;
+      margin: 0 auto 20px;
+      max-width: 100%;
+      height: auto;
     }
 
     /* Кнопка экспорта данных */
@@ -162,7 +170,6 @@
       color: red !important;
       text-shadow: 0 0 5px red !important;
     }
-
     .skill-info {
       display: flex;
       flex-direction: column;
@@ -463,6 +470,9 @@
   <!-- Верхняя надпись -->
   <div class="header">Поднятие уровня в одиночку</div>
 
+  <!-- Изображение сайта (файл 202654381.png) -->
+  <img src="202654381.png" alt="Изображение сайта" class="site-image" />
+
   <!-- Кнопка экспорта данных -->
   <button class="export-btn" onclick="exportDataAsJSON()">Экспорт JSON</button>
 
@@ -633,7 +643,7 @@
     if (localStorage.getItem(STORAGE_KEY)) {
       data = JSON.parse(localStorage.getItem(STORAGE_KEY));
     } else {
-      // Создаем дефолтный навык с пометкой "default" (название "Default Skill")
+      // Создаем дефолтный навык с пометкой default
       data.skills.push({
         id: generateId(),
         name: "Default Skill",
@@ -690,7 +700,7 @@
           sq.classList.remove("filled");
         }
       });
-      // Если навык дефолтный, добавляем класс для красного стиля
+      // Если навык дефолтный, добавляем красный стиль
       const skillBlock = document.getElementById("skillBlock");
       if (skill.default) {
         skillBlock.classList.add("default-skill");
@@ -740,7 +750,7 @@
 
     function openSkillModal() {
       const skill = data.skills[currentSkillIndex];
-      // Если дефолтный навык, переходим на page2.html
+      // Если навык дефолтный, переходим на page2.html
       if (skill.default) {
         location.href = 'page2.html';
         return;
@@ -760,7 +770,7 @@
       skill.level = parseInt(document.getElementById("skillLevelInput").value) || 1;
       skill.exp = parseInt(document.getElementById("skillExpInput").value) || 0;
       skill.desc = document.getElementById("skillDescInput").value;
-      // После редактирования считаем, что навык уже не дефолтный
+      // После редактирования навык уже не дефолтный
       skill.default = false;
       saveData();
       closeSkillModal();
