--- a/napravleniye.html
+++ b/napravleniye.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=https://hikmet2002.github.io/SoloLeveling/">
+    <title>Перенаправление</title>
+</head>
+<body>
+    <p>Если вы не были автоматически перенаправлены, перейдите по <a href="https://hikmet2002.github.io/SoloLeveling/">этой ссылке</a>.</p>
+</body>
+</html>
