--- a/napravleniye.html
+++ b/napravleniye.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://hikmet2002.github.io/SoloLeveling/">
-    <title>Перенаправление</title>
+    <title>Redirecting...</title>
+    <script>
+        // Перенаправление через JavaScript
+        window.location.replace("https://hikmet2002.github.io/SoloLeveling/");
+    </script>
 </head>
 <body>
-    <p>Если вы не были автоматически перенаправлены, перейдите по <a href="https://hikmet2002.github.io/SoloLeveling/">этой ссылке</a>.</p>
+    <p>Если перенаправление не сработало, <a href="https://hikmet2002.github.io/SoloLeveling/">перейдите по ссылке</a>.</p>
 </body>
 </html>
